static/image.css
body, html {
    height: 100%;
    margin: 0;
  }

.sidebar {
    position: fixed;
    top: 0;
    left: -500px;
    width: 500px;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.8);;
    backdrop-filter: blur(20px);
    -webkit-backdrop-filter: blur(20px);
    transition: left 0.3s ease-in-out;
    overflow: hidden;

  }
  .sidebar-toggle-label {
    position: fixed;
    top: 20px;
    left: 20px;
    cursor: pointer;
    z-index: 999;
  }
  .sidebar-toggle-label span {
    display: block;
    width: 40px;
    height: 6px;
    margin-bottom: 6px;
    background-color: #b7bdf8;
    transition: transform 0.2s ease-in-out;
    border-radius: 8px;
  }
  /* hell */
  input[type="checkbox"]:checked ~ .sidebar {
    left: 0;
  }
  
  input[type="checkbox"]:checked ~ .sidebar-toggle-label span:first-child {
    transform:rotate(0deg)translate(0px, 23px);
  }
  
  input[type="checkbox"]:checked ~ .sidebar-toggle-label span:nth-child(2) {
    opacity: 0;
  }
  
  input[type="checkbox"]:checked ~ .sidebar-toggle-label span:last-child {
    transform: rotate(90deg) ;
  
  }
  
  .container {
    margin-top: 105px;
    height:88%;
    width:97%;
    margin-left: 15px;
    color: #b7bdf8;
    font-size: 33px;
    overflow: auto;
    word-wrap: break-word;
  }
  .container::-webkit-scrollbar { 
    display: none; 
}


  
  .image {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #000;
  }
  
  .image img {
    max-width: 100%;
    max-height: 100%;
  }

.homebtn {
    position: fixed;
    width: 100%;
    height: 100%;
    margin-top: 18px;
    margin-left: 90px;
    color: #b7bdf8;
    font-size: 50px;
}

